--- a/cluster-Hail-0.2
+++ b/cluster-Hail-0.2
@@ -2,6 +2,9 @@
 Put it in a google bucket.
 
 # Create a DataProc Cluster
+You can choose the machine instance type in
+https://cloud.google.com/compute/docs/machine-types#standard_machine_types
+
 gcloud dataproc clusters create *cluster-name* \
 --project *your-project* \
 --zone *your-zone* \
@@ -21,7 +24,7 @@ gcloud compute ssh --project=*your-project* --zone=*your-zone* --ssh-flag="-D" -
 
 
 # Open a jupyter notebook
-The path may change for Mac or Linux system (see om/dataproc/docs/concepts/accessing/cluster-web-interfaces)
+The path may change for Mac or Linux system (see https://cloud.google.com/dataproc/docs/concepts/accessing/cluster-web-interfaces)
 "C:\Program Files (x86)\Google\Chrome\Application\chrome.exe" "http://*cluster-name*-m:8123" \
 --proxy-server="socks5://localhost:10000" --host-resolver-rules="MAP * 0.0.0.0 , EXCLUDE localhost" --user-data-dir="C:/temp"
 
